--- a/_config.yml
+++ b/_config.yml
@@ -28,17 +28,14 @@ url: "https://at-ribeiro.github.io"
 github:
   username: at-ribeiro # change to your GitHub username
 
-twitter:
-  username: twitter_username # change to your Twitter username
-
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: André Tomás Ribeiro
-  email: example@domain.com # change to your email address
+  email: andretomasr02@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    #- https://twitter.com/username # change to your Twitter homepage
+    # - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/at-ribeiro/ # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
@@ -102,7 +99,7 @@ avatar: /assets/avatar.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: #/assets/img/social-preview.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
@@ -219,7 +216,8 @@ exclude:
   - purgecss.js
   - rollup.config.js
   - "package*.json"
-
+  - "*.config.js"
+  
 jekyll-archives:
   enabled: [categories, tags]
   layouts:
