--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -7,9 +7,6 @@
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-#- type: rss
-#  icon: "fas fa-rss"
-#  noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
@@ -26,7 +23,7 @@
 #
 - type: bluesky
   icon: 'fa-brands fa-bluesky'
-  url: 'https://bsky.app/profile/itsdre.bsky.social'                   # Fill with your Bluesky profile link
+  url: 'https://bsky.app/profile/gamedevandre.bsky.social'                   # Fill with your Bluesky profile link
 #
 # - type: reddit
 #   icon: 'fa-brands fa-reddit'
@@ -35,3 +32,12 @@
 # - type: threads
 #   icon: 'fa-brands fa-threads'
 #   url: ''                   # Fill with your Threads profile link
+#
+#
+- type: youtube
+  icon: 'fab fa-youtube'
+  url: 'https://www.youtube.com/@gamedevandre'                   # Fill with your Youtube channel link
+
+- type: rss
+  icon: "fas fa-rss"
+  noblank: true
